# GCol-List

./: CMakeLists.txt  README.md
include/: gcol_error.h  gcol_list.h
src/: gcol_error.c  gcol_list.c
